# n_array_otus6

./: .travis.yml  CMakeLists.txt  Gof_2.pro  looptuple.h  main.cpp  matrix.h  newtuple.h  printtuple.h  readme.md  version.h.in
src/: looptuple.h  main.cpp  matrix.h  printtuple.h
tips/: flyweight.cpp  overload_multi_square_brackets.cpp
